--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   
    
 	  <ul>
-	      <li><a href="C:\Users\LabMM_03_015\Documents\skye dayat\biodata skye.html">biodata</a></li>
-		  <li><a href="file:///C:\Users\LabMM_03_015\Documents\skye dayat/BIODATA dayat.html">biodata</a></li>
-          <li><a href="C:\Users\LabMM_03_015\Documents\skye dayat\home.html">home</a></li>
-          <li><a href="C:\Users\LabMM_03_015\Documents\skye dayat\galery.html">gallery</a></li>
+	      <li><a href="biodata skye.html">biodata</a></li>
+		  <li><a href="BIODATA dayat.html">biodata</a></li>
+          <li><a href="home.html">home</a></li>
+          <li><a href="galery.html">gallery</a></li>
 		  <li><a href="daftarrus.html">rumus</a></li>
 		 </ul>  
 		 
