--- a/biodata skye.html
+++ b/biodata skye.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>biodata</h1>
-<img src="foto/skye.JPG">
+<img src="skye.JPG">
 <p>NAMA: Skye Abiyu Yardan Xavier Achmadi.</p>
 <p>TTL: Banyuwangi, 8 september 2006.</p>
 <p>HOBI: Bersepeda.</p>
