--- a/BIODATA dayat.html
+++ b/BIODATA dayat.html
@@ -7,7 +7,7 @@
 
 <h3>Biodata</h3>
 
-<img src="foto/duhhhhhhhhhhhh.jpg">
+<img src="duhhhhhhhhhhhh.jpg">
 
 <p>NAMA: NURHIDAYAT.</p>
 <p>Tempat,Tanggal Lahir : Banyuwangi,08 September 2006.</p>
